Fixed small issue with spacing for the skills gallery items.

--- a/src/assets/stylesheets/pages/landing/skills.less
+++ b/src/assets/stylesheets/pages/landing/skills.less
@@ -30,6 +30,7 @@
 
       &-stack {
         .default-margin-vertical;
+        line-height: 30px;
       }
 
       &-description {
